﻿****
News
****

- NEW: Signed integers assignment, add, sub, print
- NEW: Check phase
- NEW: Initializing array or slice of array with constant
- NEW: Assigning array to position at array (p(3) = x)

==========
3-Oct-2010
==========

- OPT: Value optimization can elimitate some variable stores replacing them by more complex addressing modes 
- NEW: Support NOT
- NEW: RETURN allows returning from procedure including return values specifications
- Atari: all keyboard scan codes
- FIX: AND,OR in UNTIL
- FIX: Error when printing apostrophe
- FIX: Support initialized arrays at specified address

===========
28-Sep-2010
===========

- improved common subexpression optimisation
- detection and reporting of interprocedural goto and goto to undefined label
- square root (SQRT)

===========
15-Sep-2010
===========

- FOR now supports STEP
- FILE may be used as array reference (set'font file "baloon.fnt")
- variable A may be declared as alias of variable B usign A@B syntax (very usefull for system procedures arguments)
- data-flow analysis in live value analysis
- commutative instructions in backend are translated using switched order if necesary

===========
6-Sep-2010
===========

- Raster Music Tracker module
- unused procedure detection

===========
3-Sep-2010
===========

- module system (Use keyword)
- very basic version of structures
- many bugs fixed
- projects page
- Little Fifteen game by Jakub Husak included (3 games developed in Atalan now!)

===========
24-Aug-2010
===========

- 16 bit multiplication
- inserting file/line references to output
- support for colorized output
- let the assembler generate .lst file too

===========
23-Aug-2010
===========

- rewritten lexer (fixes some parsing errors)

===========
21-Aug-2010
===========

- var.min, var.max built-in associated variables
- relational operators chains (10 < x < 30)

===========
16-Aug-2010
===========

- first version of type inferencing
- improved error reporting (displays text of line with error)