@@ -1580,11 +1580,24 @@ rule arrindex %A:array (byte,byte) of byte,%B,%C    = "%A_lo:  :%C dta l(%A + #*
 _std_print_out:proc
 _std_print_adr:proc a@_arr:adr
 
-rule print     = instr
+std_print:macro = instr
 	call _std_print_out
-	
-rule format    = instr
+	ref _a
+	ref _x
+	ref _y
+
+std_format:macro a:adr = instr
+	let_adr _arr, a
 	call _std_print_adr
+	ref _a
+	ref _x
+	ref _y
+	
+;rule print     = instr
+;	call std_print
+	
+;rule format    = instr
+;	call _std_print_adr
 
 rule str_arg ,%A,%B:byte  = "   dta b(%B),%'A"
 rule var_arg ,%A:byte   = "   dta b(129),a(%A)"
