@@ -7,6 +7,9 @@ News
 - NEW: Initializing array or slice of array with constant
 - NEW: Assigning array to position at array (p(3) = x)
 
+- NEW: Print variable arguments with known value are replaced by strings 
+- FIX: print & format is now implemented as macro, not instruction
+
 ==========
 3-Oct-2010
 ==========
